--- a/html_practice/test.html
+++ b/html_practice/test.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>HTML/CSS</h1>
-  <p>Hypertext Markup Language는 문서의 논리적인 구조를 표기하는 언어입니다.</p>
-</body>
-</html>
+<a href="https://www.google.com" target="_blank">구글로!</a>
+<a href="https://www.naver.com" title="네이버로 갈까요?">네이버로!</a>
+<a href="https://www.instagram.com">인스타그램으로!</a>
